# octopus

./: .copier-answers.yaml  .dockerignore  .gitattributes  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.dist.yaml  docker-compose.yaml  entrypoint.sh  environment.yaml  environment.yml  flake.nix  pyproject.toml
.github/workflows/: docker-build.yml  docker-push.yml  docs.yaml  docs.yml  draft.yaml  draft.yml  image.yaml  lint.yaml  registry.yaml  registry.yml  test-docker.yaml  test-docker.yml  test.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
docs/: docusaurus.config.js  docusaurus.config.mts  docusaurus.config.ts
docs/docs/: 01-Index.md  02-Usage.md  03-Configuration.md
emistream/: README.md  pyproject.toml
emistream/docs/: mkdocs.yml
emistream/docs/docs/: index.md
emistream/src/emistream/: __init__.py  __main__.py  app.py  client.py  config.py  hashing.py  server.py  time.py  utils.py
emistream/src/emistream/api/: app.py  socket.py
emistream/src/emistream/api/paths/: router.py
emistream/src/emistream/api/paths/available/: controller.py  models.py  router.py
emistream/src/emistream/api/paths/reserve/: controller.py  models.py  router.py
emistream/src/emistream/config/: __init__.py  base.py  models.py  utils.py
emistream/src/emistream/fusion/: client.py
emistream/src/emistream/models/: available.py  base.py  data.py  record.py  reserve.py  stream.py
emistream/src/emistream/paths/: router.py
emistream/src/emistream/paths/available/: controller.py  router.py
emistream/src/emistream/paths/reserve/: controller.py  router.py
emistream/src/emistream/recorder/: client.py
emistream/src/emistream/recorder/models/: api.py  data.py
emistream/src/emistream/stream/: __init__.py  management.py  stream.py
emistream/tests/functional/: test_emistream.py
src/emistream/: __main__.py  cli.py  console.py  server.py  state.py  time.py
src/emistream/api/: __init__.py  app.py  validator.py
src/emistream/api/routes/: router.py
src/emistream/api/routes/available/: controller.py  models.py  router.py  service.py
src/emistream/api/routes/check/: controller.py  errors.py  models.py  router.py  service.py
src/emistream/api/routes/ping/: controller.py  models.py  router.py  service.py
src/emistream/api/routes/reserve/: controller.py  errors.py  models.py  router.py  service.py
src/emistream/api/routes/sse/: controller.py  models.py  router.py  service.py
src/emistream/config/: __init__.py  base.py  builder.py  models.py
src/emistream/emirecorder/: client.py  errors.py  models.py  service.py
src/emistream/emirecords/: errors.py  models.py  service.py
src/emistream/emishows/: errors.py  models.py  service.py
src/emistream/locks/: asyncio.py  base.py
src/emistream/models/: __init__.py  base.py  data.py  events.py
src/emistream/models/events/: event.py  foo.py  streaming.py  types.py
src/emistream/services/emirecords/: models.py  service.py
src/emistream/services/emishows/: models.py  serializer.py  service.py
src/emistream/services/events/: models.py  service.py
src/emistream/services/ping/: models.py  service.py
src/emistream/services/streaming/: errors.py  models.py  runner.py  service.py
src/emistream/stores/: base.py  memory.py
src/emistream/stream/: controller.py  errors.py  runner.py  state.py
src/emistream/streaming/: controller.py  errors.py  models.py  runner.py
src/octopus/: __main__.py  server.py  state.py
src/octopus/api/: app.py  lifespans.py  openapi.py  validator.py
src/octopus/api/routes/: router.py
src/octopus/api/routes/check/: controller.py  models.py  router.py  service.py
src/octopus/api/routes/ping/: controller.py  models.py  router.py  service.py
src/octopus/api/routes/reserve/: controller.py  errors.py  models.py  router.py  service.py
src/octopus/api/routes/sse/: controller.py  models.py  router.py  service.py
src/octopus/api/routes/test/: controller.py  models.py  router.py  service.py
src/octopus/config/: base.py  builder.py  models.py
src/octopus/models/events/: enums.py  event.py  fields.py  foo.py  stream.py  streaming.py  test.py  types.py
src/octopus/services/apis/beaver/: errors.py  models.py  service.py
src/octopus/services/beaver/: errors.py  models.py  serializer.py  service.py
src/octopus/services/events/: models.py  service.py
src/octopus/services/ping/: models.py  service.py
src/octopus/services/streaming/: errors.py  models.py  runner.py  service.py
src/octopus/services/test/: models.py  service.py
src/octopus/utils/: time.py
tests/integration/: conftest.py  test_available.py  test_check.py  test_reserve.py
