[tool.poetry]
name = "emistream"
version = "0.9.0"
description = "Emission streaming logic 🔴"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.12"
# Pydantic is used to define data models
pydantic = "^2.5"
pydantic-settings = "^2.1"
# OmegaConf is used to load configuration
omegaconf = "^2.3"
# Typer and Rich are used to build CLIs
typer = { version = "^0.9", extras = ["all"] }
rich = "^13.7"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.4"
uvicorn = { version = "^0.25", extras = ["standard"] }
# For correct handling of timezones
tzdata = "*"
# Streaming utilities
pystreams = { git = "https://github.com/radio-aktywne/package-pystreams.git", tag = "0.5.0" }
# Helps building API clients
gracy = "^1.32"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
# Asyncio support for pytest
pytest-asyncio = "^0.23"
# Running dependent services in containers
testcontainers = "^3.7"
# Async HTTP requests
httpx = "^0.26"

[tool.poetry.scripts]
# Register CLI
emistream = "emistream.__main__:cli"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
