[project]
name = "octopus"
version = "0.22.0"
classifiers = ["Private :: Do Not Upload"]
requires-python = "~= 3.13.0"
dependencies = [
  # Defining data models
  "pydantic ~= 2.12.0",
  # Loading configuration
  "pydantic-settings ~= 2.12.0",
  # Building CLIs
  "typer ~= 0.21.0",
  # Pretty-printing in the terminal
  "rich ~= 14.2.0",
  # Main API framework
  "litestar ~= 2.19.0",
  # ASGI server
  "uvicorn[standard] ~= 0.40.0",
  # Timezone data
  "tzdata",
  # Streaming utilities
  "pystreams @ https://github.com/radio-aktywne/pystreams/archive/refs/tags/0.13.0.tar.gz",
  # Locking utilities
  "pylocks @ https://github.com/radio-aktywne/pylocks/archive/refs/tags/0.7.0.tar.gz",
  # Storage utilities
  "pystores @ https://github.com/radio-aktywne/pystores/archive/refs/tags/0.8.0.tar.gz",
  # Helps building API clients
  "gracy ~= 1.34.0",
]

[dependency-groups]
dev = [
  # Testing framework
  "pytest ~= 9.0.0",
  # Asyncio support for pytest
  "pytest-asyncio ~= 1.3.0",
  # Containers interface for testing
  "testcontainers ~= 4.13.0",
  # Async HTTP requests
  "httpx ~= 0.28.0",
]

[project.scripts]
octopus = "octopus.__main__:cli"

[build-system]
requires = ["uv_build ~= 0.7.0"]
build-backend = "uv_build"

[tool.pyright]
# Analyze code only in these directories
include = ["src", "tests"]

# Specify the path to the virtual environment
venv = ".venv"
venvPath = "."

# Python version and platform to target
pythonPlatform = "All"
pythonVersion = "3.13"

[tool.pytest.ini_options]
# Remove in the future: https://github.com/pytest-dev/pytest-asyncio/issues/924
asyncio_default_fixture_loop_scope = "function"
