[tool.poetry]
name = "emistream"
version = "0.1.0"
description = "Emission with WebRTC 🌈"
readme = "README.md"
authors = ["radio-aktywne <it@radioaktywne.pl>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/radio-aktywne/emistream"
documentation = "https://radio-aktywne.github.io/emistream"

[tool.poetry.dependencies]
python = "^3.9"
typer = { version = "^0.4", extras = ["all"] }
starlite = "^1.2"
uvicorn = { version = "^0.17", extras = ["standard"] }
pystreams = { git = "https://github.com/radio-aktywne/pystreams.git", tag = "0.1.1" }
httpx = "^0.22"

# dev

# test
pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["pytest"]
test = ["pytest"]
[tool.poetry.scripts]
# cli entry point
emistream = "emistream.__main__:cli"

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
